DB 조회, 파일 전송 받는 api 구현
